# redbook-dating

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
redbook_dating/: manage.py
redbook_dating/animals/: models.py
redbook_dating/animals/migrations/: 0001_initial.py  0002_animal_user.py
redbook_dating/redbook_dating/: asgi.py  settings.py  urls.py  wsgi.py
redbook_dating/users/: managers.py  models.py  serializer.py  tests.py
redbook_dating/users/migrations/: 0001_initial.py
