[tool.poetry]
name = "redbook-dating"
version = "0.1.0"
description = "Website for finding a pair of red book animals"
authors = ["Danil Maximov <jokjokjokerface@gmail.com>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
